@@ -3,6 +3,9 @@
 	* src/sp-item.cpp: move "transformed" signal emission after actual
 	  application of transform
 
+	* src/xml/repr-action.cpp, src/xml/repr-action.h, src/xml/repr.cpp:
+	  fix lifecycle issues with content and attribute strings
+
 2004-05-08  Kees Cook <kees@outflux.net>
 
 	* src/verbs.cpp, src/help.cpp: localizing "about" and "keys" stuff.
